--- a/language-translator/src/main/resources/application.properties
+++ b/language-translator/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Database Configuration
 spring.datasource.url=jdbc:h2:mem:translatordb;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -21,14 +22,9 @@ logging.level.org.springframework.web=INFO
 logging.level.com.translator=DEBUG
 
 # JPA Settings
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Security (for development only)
 spring.security.user.name=admin
 spring.security.user.password=admin
-
-
-
