--- a/language-translator/src/main/resources/application.properties
+++ b/language-translator/src/main/resources/application.properties
@@ -3,28 +3,24 @@ spring.datasource.url=jdbc:h2:mem:translatordb;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# JPA/Hibernate Properties
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=DEBUG
 
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=false
 
-# Thymeleaf Configuration
-spring.thymeleaf.cache=false
-
-# Server Configuration
-server.port=8080
-
-# Logging
-logging.level.org.springframework.web=INFO
-logging.level.com.translator=DEBUG
-
-# JPA Settings
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Security (for development only)
-spring.security.user.name=admin
-spring.security.user.password=admin
+# Server error handling
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
